# cltrain

./: README.md  pyproject.toml
examples/dpr/: .gitignore  README.md  default.conf  run_training.sh
examples/dpr/data/: convert_nq_to_jsonl.py
examples/dpr/src/: build.py  data.py  generate.py  indexer.py  model_utils.py  models.py  retrieve.py  train.py  trainer.py
examples/simcse/: .gitignore  .ruff.toml  README.md  requirements.txt  run_sup_training.sh  run_unsup_training.sh  training.conf
examples/simcse/src/: train.py  trainer.py
src/cltrain/: __init__.py  models.py  tools.py
src/cltrainer/: __init__.py  data.py  models.py  parallel.py  trainer.py
