[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cltrain"
version = "0.1"
authors = [
    {name = "Hiroki Teranishi", email = "hiroki.teranishi@riken.jp"}
]
description = "transformers trainer for contrastive learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "torch~=2.0",
  "transformers[torch]~=4.30",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["cltrain"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I"]
ignore = ["B905"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
